mule-user-guide/v/3.5/deployment-scenarios.adoc
= Deployment Scenarios

The table below lists the ways in which you can deploy Mule ESB on premise, and some of the characteristics of each method. 

[width="100%",cols=",",options="header"]
|===
|Deployment Mode |Container |Pros |Cons |HA |MMC
|Standalone |Mule ESB a|
* uses the Mule Deployment Model
* can run multiple apps
* supports hot deployment
* requires minimal resources 
* easy to install
a|
* Mule must be provisioned into your environment
|Supported |Supported
|Embedded `.war` file |App Server a|
* uses webapp deployment model
* can run multiple apps
* webapp contains all dependencies
a|
* each web app runs own mule instance, thereby increasing the size of the webapp
|App Server HA |Supported*
|Embedded Java |Java App / IDE a|
* requires no external container
a|
* does not support hot deployment
|Not Supported |Supported*
|===

*When Mule is embedded in some other container, the link:/documentation/display/current/Mule+Management+Console[Mule Management Console] cannot perform auto-discovery or server restarts.

== Running Mule in Standalone Mode

The recommended approach is to run Mule Standalone from the command prompt, as a service or daemon, or from a script. As the simplest architecture, it reduces the number of points where errors can occur. It's typically best for performance as well, since it reduces the number of layers and eliminates the inherent performance impact of an application server on the overall solution.

You can also run multiple applications side-by-side in a Mule instance using the Mule Deployment Model. This model supports live deployment and hot redeployment of applications.  Further, Mule Standalone fully support for link:/documentation/display/current/Mule+High+Availability+HA+Clusters[Mule High Availability] module and use of the link:/documentation/display/current/Mule+Management+Console[Mule management console].

For more information on running Mule standalone, see link:/documentation/display/current/Mule+Deployment+Model[Mule Deployment Model].

[NOTE]
====
*Mule Standalone vs. Application Server*

Listed below are some of the advantages of running Mule standalone vs running it as a web application deployed in an application server (Tomcat, WebSphere, JBoss, etc.)

* *Wrapper control*: Mule Standalone makes use of a Java Service Wrapper which controls the JVM from your operating system and starts Mule. The wrapper can handle system signals and provides better interaction between the JVM and the underlying operating system. 
* *Smaller memory footprint*: Mule standalone loads only the required resources for an application; an application server adds its own resources.
* *Anypoint DataMapper support*: DataMapper is supported only on a Mule Enterprise Standalone runtime; other application servers do not support DataMapper.
* *Deployment and Application Management*: Through the Mule Management Console, you have full control of the applications running on Mule Standalone, allowing you to deploy/undeploy applications and restart/stop the server. Other application servers do not support this visibility.
====

== Embedding Mule in a Java Application or Webapp

You can start and stop Mule from a Java application or embed it in a Webapp (such as a JSP or servlet). For general instructions, see link:/documentation/display/current/Embedding+Mule+in+a+Java+Application+or+Webapp[Embedding Mule in a Java Application or Webapp]. Listed below are links to documentation which offer application server-specifc information regarding Mule application deployment.

* link:/documentation/display/current/Deploying+Mule+to+JBoss[Deploying Mule to JBoss]
* link:/documentation/display/current/Deploying+Mule+to+WebLogic[Deploying Mule to WebLogic]
* link:/documentation/display/current/Deploying+Mule+to+WebSphere[Deploying Mule to WebSphere]
* link:/documentation/display/current/Deploying+Mule+as+a+Service+to+Tomcat[Deploying Mule as a Service to Tomcat]
* http://geronimo.apache.org[Geronimo] (The Geronimo application server uses ActiveMQ as its default JMS provider. For details, see link:/documentation/display/current/ActiveMQ+Integration[ActiveMQ Integration].)

For details on how to support Mule hot deployment within some application servers, see link:/documentation/display/current/Application+Server+Based+Hot+Deployment[Application Server Based Hot Deployment].

Note that when embedded, Mule does not support the Mule Deployment Model or High Availability. Furthermore, because the application server needs control of Mule, the Mule Management Console's capabilities are reduced; specifically, you cannot restart the server via the Mule Management Console.

== Using Spring

Mule fully integrates with Spring, allowing you to take advantage of Spring's many features, including JNDI and EJB session beans. You can also use Spring remoting to access Mule from an external application. For details, see link:/documentation/display/current/Using+Mule+with+Spring[Using Mule with Spring].

== Sharing Resources

If you're deploying multiple applications to the same place, in whichever of the ways explained above, and those applications could share the same resources, then you can create a common domain where you can define common configurations that can then be referenced by multiple projects. This allows you to, for example, expose different services in different projects through the same HTTP host and port and be able to deploy everything without any conflicts. Read More.
